finished documenting the routes that require authentication
